tests/errors/semantic/non_blocking/UNKNOWN_IMPORT.py
# pylint: disable=missing-function-docstring, missing-module-docstring, unused-import
from numpy import invented_func
